0.1.99 : fix inline code line wrap

--- a/easy_llama/assets/styles.css
+++ b/easy_llama/assets/styles.css
@@ -195,7 +195,7 @@ code:not(pre code) { /* inline code */
     border-radius: 5px;
     padding: 0.5rex;
     hyphens: none;
-    white-space: pre;
+    /* white-space: pre; */
 }
 
 a {
